src/scl/parser/ConformParser.cpp

// Generated from /Users/matthieuriolo/Documents/Sourcecode/scl/src/scl/Conform.g4 by ANTLR 4.8


#include "ConformVisitor.h"

#include "ConformParser.h"


using namespace antlrcpp;
using namespace antlr4;

ConformParser::ConformParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ConformParser::~ConformParser() {
  delete _interpreter;
}

std::string ConformParser::getGrammarFileName() const {
  return "Conform.g4";
}

const std::vector<std::string>& ConformParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ConformParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- InstructionContext ------------------------------------------------------------------

ConformParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConformParser::InstructionContext::EOF() {
  return getToken(ConformParser::EOF, 0);
}

ConformParser::PrintContext* ConformParser::InstructionContext::print() {
  return getRuleContext<ConformParser::PrintContext>(0);
}

ConformParser::AssignContext* ConformParser::InstructionContext::assign() {
  return getRuleContext<ConformParser::AssignContext>(0);
}

ConformParser::AssignPropertyContext* ConformParser::InstructionContext::assignProperty() {
  return getRuleContext<ConformParser::AssignPropertyContext>(0);
}

ConformParser::IfControlContext* ConformParser::InstructionContext::ifControl() {
  return getRuleContext<ConformParser::IfControlContext>(0);
}

ConformParser::ForControlContext* ConformParser::InstructionContext::forControl() {
  return getRuleContext<ConformParser::ForControlContext>(0);
}


size_t ConformParser::InstructionContext::getRuleIndex() const {
  return ConformParser::RuleInstruction;
}


antlrcpp::Any ConformParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::InstructionContext* ConformParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 0, ConformParser::RuleInstruction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(48);
      print();
      break;
    }

    case 2: {
      setState(49);
      assign();
      break;
    }

    case 3: {
      setState(50);
      assignProperty();
      break;
    }

    case 4: {
      setState(51);
      ifControl();
      break;
    }

    case 5: {
      setState(52);
      forControl();
      break;
    }

    }
    setState(55);
    match(ConformParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfControlContext ------------------------------------------------------------------

ConformParser::IfControlContext::IfControlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConformParser::IfControlContext::CONTROL_IF() {
  return getToken(ConformParser::CONTROL_IF, 0);
}

ConformParser::ExpressionContext* ConformParser::IfControlContext::expression() {
  return getRuleContext<ConformParser::ExpressionContext>(0);
}


size_t ConformParser::IfControlContext::getRuleIndex() const {
  return ConformParser::RuleIfControl;
}


antlrcpp::Any ConformParser::IfControlContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitIfControl(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::IfControlContext* ConformParser::ifControl() {
  IfControlContext *_localctx = _tracker.createInstance<IfControlContext>(_ctx, getState());
  enterRule(_localctx, 2, ConformParser::RuleIfControl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(ConformParser::CONTROL_IF);
    setState(58);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForControlContext ------------------------------------------------------------------

ConformParser::ForControlContext::ForControlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConformParser::ForControlContext::CONTROL_FOR() {
  return getToken(ConformParser::CONTROL_FOR, 0);
}

ConformParser::VariableContext* ConformParser::ForControlContext::variable() {
  return getRuleContext<ConformParser::VariableContext>(0);
}

tree::TerminalNode* ConformParser::ForControlContext::CONTROL_IN() {
  return getToken(ConformParser::CONTROL_IN, 0);
}

ConformParser::ExpressionContext* ConformParser::ForControlContext::expression() {
  return getRuleContext<ConformParser::ExpressionContext>(0);
}


size_t ConformParser::ForControlContext::getRuleIndex() const {
  return ConformParser::RuleForControl;
}


antlrcpp::Any ConformParser::ForControlContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitForControl(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::ForControlContext* ConformParser::forControl() {
  ForControlContext *_localctx = _tracker.createInstance<ForControlContext>(_ctx, getState());
  enterRule(_localctx, 4, ConformParser::RuleForControl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    match(ConformParser::CONTROL_FOR);
    setState(61);
    variable();
    setState(62);
    match(ConformParser::CONTROL_IN);
    setState(63);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintContext ------------------------------------------------------------------

ConformParser::PrintContext::PrintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConformParser::PrintContext::KEYWORD_PRINT() {
  return getToken(ConformParser::KEYWORD_PRINT, 0);
}

ConformParser::ExpressionContext* ConformParser::PrintContext::expression() {
  return getRuleContext<ConformParser::ExpressionContext>(0);
}


size_t ConformParser::PrintContext::getRuleIndex() const {
  return ConformParser::RulePrint;
}


antlrcpp::Any ConformParser::PrintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitPrint(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::PrintContext* ConformParser::print() {
  PrintContext *_localctx = _tracker.createInstance<PrintContext>(_ctx, getState());
  enterRule(_localctx, 6, ConformParser::RulePrint);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(ConformParser::KEYWORD_PRINT);
    setState(66);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

ConformParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConformParser::AssignContext::OPERAND_EQUAL() {
  return getToken(ConformParser::OPERAND_EQUAL, 0);
}

ConformParser::VariableContext* ConformParser::AssignContext::variable() {
  return getRuleContext<ConformParser::VariableContext>(0);
}

ConformParser::ExpressionContext* ConformParser::AssignContext::expression() {
  return getRuleContext<ConformParser::ExpressionContext>(0);
}


size_t ConformParser::AssignContext::getRuleIndex() const {
  return ConformParser::RuleAssign;
}


antlrcpp::Any ConformParser::AssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitAssign(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::AssignContext* ConformParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 8, ConformParser::RuleAssign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    dynamic_cast<AssignContext *>(_localctx)->key = variable();
    setState(69);
    match(ConformParser::OPERAND_EQUAL);
    setState(70);
    dynamic_cast<AssignContext *>(_localctx)->value = expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignPropertyContext ------------------------------------------------------------------

ConformParser::AssignPropertyContext::AssignPropertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConformParser::AssignPropertyContext::SQUARED_BRACKET_OPEN() {
  return getToken(ConformParser::SQUARED_BRACKET_OPEN, 0);
}

tree::TerminalNode* ConformParser::AssignPropertyContext::SQUARED_BRACKET_CLOSE() {
  return getToken(ConformParser::SQUARED_BRACKET_CLOSE, 0);
}

tree::TerminalNode* ConformParser::AssignPropertyContext::OPERAND_EQUAL() {
  return getToken(ConformParser::OPERAND_EQUAL, 0);
}

std::vector<ConformParser::ExpressionContext *> ConformParser::AssignPropertyContext::expression() {
  return getRuleContexts<ConformParser::ExpressionContext>();
}

ConformParser::ExpressionContext* ConformParser::AssignPropertyContext::expression(size_t i) {
  return getRuleContext<ConformParser::ExpressionContext>(i);
}


size_t ConformParser::AssignPropertyContext::getRuleIndex() const {
  return ConformParser::RuleAssignProperty;
}


antlrcpp::Any ConformParser::AssignPropertyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitAssignProperty(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::AssignPropertyContext* ConformParser::assignProperty() {
  AssignPropertyContext *_localctx = _tracker.createInstance<AssignPropertyContext>(_ctx, getState());
  enterRule(_localctx, 10, ConformParser::RuleAssignProperty);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    dynamic_cast<AssignPropertyContext *>(_localctx)->property = expression();
    setState(73);
    match(ConformParser::SQUARED_BRACKET_OPEN);
    setState(74);
    dynamic_cast<AssignPropertyContext *>(_localctx)->key = expression();
    setState(75);
    match(ConformParser::SQUARED_BRACKET_CLOSE);
    setState(76);
    match(ConformParser::OPERAND_EQUAL);
    setState(77);
    dynamic_cast<AssignPropertyContext *>(_localctx)->value = expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

ConformParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ConformParser::ExpressionConcatedContext* ConformParser::ExpressionContext::expressionConcated() {
  return getRuleContext<ConformParser::ExpressionConcatedContext>(0);
}

ConformParser::ExpressionAccessContext* ConformParser::ExpressionContext::expressionAccess() {
  return getRuleContext<ConformParser::ExpressionAccessContext>(0);
}


size_t ConformParser::ExpressionContext::getRuleIndex() const {
  return ConformParser::RuleExpression;
}


antlrcpp::Any ConformParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::ExpressionContext* ConformParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 12, ConformParser::RuleExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(81);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(79);
      expressionConcated(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(80);
      expressionAccess();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionAccessContext ------------------------------------------------------------------

ConformParser::ExpressionAccessContext::ExpressionAccessContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ConformParser::AccessContext* ConformParser::ExpressionAccessContext::access() {
  return getRuleContext<ConformParser::AccessContext>(0);
}

ConformParser::AccessRangeContext* ConformParser::ExpressionAccessContext::accessRange() {
  return getRuleContext<ConformParser::AccessRangeContext>(0);
}


size_t ConformParser::ExpressionAccessContext::getRuleIndex() const {
  return ConformParser::RuleExpressionAccess;
}


antlrcpp::Any ConformParser::ExpressionAccessContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitExpressionAccess(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::ExpressionAccessContext* ConformParser::expressionAccess() {
  ExpressionAccessContext *_localctx = _tracker.createInstance<ExpressionAccessContext>(_ctx, getState());
  enterRule(_localctx, 14, ConformParser::RuleExpressionAccess);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(83);
      access();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(84);
      accessRange();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AccessContext ------------------------------------------------------------------

ConformParser::AccessContext::AccessContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConformParser::AccessContext::SQUARED_BRACKET_OPEN() {
  return getToken(ConformParser::SQUARED_BRACKET_OPEN, 0);
}

tree::TerminalNode* ConformParser::AccessContext::SQUARED_BRACKET_CLOSE() {
  return getToken(ConformParser::SQUARED_BRACKET_CLOSE, 0);
}

std::vector<ConformParser::ExpressionConcatedContext *> ConformParser::AccessContext::expressionConcated() {
  return getRuleContexts<ConformParser::ExpressionConcatedContext>();
}

ConformParser::ExpressionConcatedContext* ConformParser::AccessContext::expressionConcated(size_t i) {
  return getRuleContext<ConformParser::ExpressionConcatedContext>(i);
}


size_t ConformParser::AccessContext::getRuleIndex() const {
  return ConformParser::RuleAccess;
}


antlrcpp::Any ConformParser::AccessContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitAccess(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::AccessContext* ConformParser::access() {
  AccessContext *_localctx = _tracker.createInstance<AccessContext>(_ctx, getState());
  enterRule(_localctx, 16, ConformParser::RuleAccess);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    dynamic_cast<AccessContext *>(_localctx)->property = expressionConcated(0);
    setState(88);
    match(ConformParser::SQUARED_BRACKET_OPEN);
    setState(89);
    dynamic_cast<AccessContext *>(_localctx)->key = expressionConcated(0);
    setState(90);
    match(ConformParser::SQUARED_BRACKET_CLOSE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AccessRangeContext ------------------------------------------------------------------

ConformParser::AccessRangeContext::AccessRangeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConformParser::AccessRangeContext::SQUARED_BRACKET_OPEN() {
  return getToken(ConformParser::SQUARED_BRACKET_OPEN, 0);
}

tree::TerminalNode* ConformParser::AccessRangeContext::COLON() {
  return getToken(ConformParser::COLON, 0);
}

tree::TerminalNode* ConformParser::AccessRangeContext::SQUARED_BRACKET_CLOSE() {
  return getToken(ConformParser::SQUARED_BRACKET_CLOSE, 0);
}

std::vector<ConformParser::ExpressionConcatedContext *> ConformParser::AccessRangeContext::expressionConcated() {
  return getRuleContexts<ConformParser::ExpressionConcatedContext>();
}

ConformParser::ExpressionConcatedContext* ConformParser::AccessRangeContext::expressionConcated(size_t i) {
  return getRuleContext<ConformParser::ExpressionConcatedContext>(i);
}


size_t ConformParser::AccessRangeContext::getRuleIndex() const {
  return ConformParser::RuleAccessRange;
}


antlrcpp::Any ConformParser::AccessRangeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitAccessRange(this);
  else
    return visitor->visitChildren(this);
}

ConformParser::AccessRangeContext* ConformParser::accessRange() {
  AccessRangeContext *_localctx = _tracker.createInstance<AccessRangeContext>(_ctx, getState());
  enterRule(_localctx, 18, ConformParser::RuleAccessRange);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(111);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(92);
      dynamic_cast<AccessRangeContext *>(_localctx)->property = expressionConcated(0);
      setState(93);
      match(ConformParser::SQUARED_BRACKET_OPEN);
      setState(94);
      dynamic_cast<AccessRangeContext *>(_localctx)->start = expressionConcated(0);
      setState(95);
      match(ConformParser::COLON);
      setState(96);
      match(ConformParser::SQUARED_BRACKET_CLOSE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(98);
      dynamic_cast<AccessRangeContext *>(_localctx)->property = expressionConcated(0);
      setState(99);
      match(ConformParser::SQUARED_BRACKET_OPEN);
      setState(100);
      match(ConformParser::COLON);
      setState(101);
      dynamic_cast<AccessRangeContext *>(_localctx)->end = expressionConcated(0);
      setState(102);
      match(ConformParser::SQUARED_BRACKET_CLOSE);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(104);
      dynamic_cast<AccessRangeContext *>(_localctx)->property = expressionConcated(0);
      setState(105);
      match(ConformParser::SQUARED_BRACKET_OPEN);
      setState(106);
      dynamic_cast<AccessRangeContext *>(_localctx)->start = expressionConcated(0);
      setState(107);
      match(ConformParser::COLON);
      setState(108);
      dynamic_cast<AccessRangeContext *>(_localctx)->end = expressionConcated(0);
      setState(109);
      match(ConformParser::SQUARED_BRACKET_CLOSE);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionConcatedContext ------------------------------------------------------------------

ConformParser::ExpressionConcatedContext::ExpressionConcatedContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ConformParser::ExpressionGroupedContext* ConformParser::ExpressionConcatedContext::expressionGrouped() {
  return getRuleContext<ConformParser::ExpressionGroupedContext>(0);
}

std::vector<ConformParser::ExpressionConcatedContext *> ConformParser::ExpressionConcatedContext::expressionConcated() {
  return getRuleContexts<ConformParser::ExpressionConcatedContext>();
}

ConformParser::ExpressionConcatedContext* ConformParser::ExpressionConcatedContext::expressionConcated(size_t i) {
  return getRuleContext<ConformParser::ExpressionConcatedContext>(i);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::OPERAND_PLUS() {
  return getToken(ConformParser::OPERAND_PLUS, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::OPERAND_MINUS() {
  return getToken(ConformParser::OPERAND_MINUS, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::OPERAND_ASTERISK() {
  return getToken(ConformParser::OPERAND_ASTERISK, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::OPERAND_SLASH() {
  return getToken(ConformParser::OPERAND_SLASH, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::OPERAND_CARET() {
  return getToken(ConformParser::OPERAND_CARET, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::OPERAND_AND() {
  return getToken(ConformParser::OPERAND_AND, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::OPERAND_OR() {
  return getToken(ConformParser::OPERAND_OR, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::COMPARATOR_EQUAL() {
  return getToken(ConformParser::COMPARATOR_EQUAL, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::COMPARATOR_NOT_EQUAL() {
  return getToken(ConformParser::COMPARATOR_NOT_EQUAL, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::COMPARATOR_LESS() {
  return getToken(ConformParser::COMPARATOR_LESS, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::COMPARATOR_GREATER() {
  return getToken(ConformParser::COMPARATOR_GREATER, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::COMPARATOR_LESS_EQUAL() {
  return getToken(ConformParser::COMPARATOR_LESS_EQUAL, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::COMPARATOR_GREATER_EQUAL() {
  return getToken(ConformParser::COMPARATOR_GREATER_EQUAL, 0);
}

tree::TerminalNode* ConformParser::ExpressionConcatedContext::RANGE() {
  return getToken(ConformParser::RANGE, 0);
}


size_t ConformParser::ExpressionConcatedContext::getRuleIndex() const {
  return ConformParser::RuleExpressionConcated;
}


antlrcpp::Any ConformParser::ExpressionConcatedContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ConformVisitor*>(visitor))
    return parserVisitor->visitExpressionConcated(this);
  else
    return visitor->visitChildren(this);
}


ConformParser::ExpressionConcatedContext* ConformParser::expressionConcated() {
   return expressionConcated(0);
}

ConformParser::ExpressionConcatedContext* ConformParser::expressionConcated(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ConformParser::ExpressionConcatedContext *_localctx = _tracker.createInstance<ExpressionConcatedContext>(_ctx, parentState);
  ConformParser::ExpressionConcatedContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, ConformParser::RuleExpressionConcated, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(114);
    expressionGrouped();
    _ctx->stop = _input->LT(-1);
    setState(127);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(125);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionConcatedContext>(parentContext, parentState);
          _localctx->left = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleExpressionConcated);
          setState(116);
